# atlassian-plugin-remote-install

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.MD  Dockerfile  LICENSE  Makefile  README.md  dev-requirements.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-docker-image.yml  update-docs.yml
cli/: index.html
docs/: cli.md  index.md  pipelines.md
pipelines/: index.html
src/: __init__.py  config.py  install_plugin.py  main.py  remove_plugin.py
src/atlassian/: atlassian_api.py  jira.py
src/utils/: apprise_notify.py  helper.py
