[project]
name = "atlassian-plugin-remote-install"

description = "Remotely install plugin to Atlassian instance"
version = "0.5.0"

authors = [{ name = "Trung Le", email = "trung.le@devsamurai.com" }]

requires-python = ">=3.9"

dependencies = [
  "apprise==1.0.0",
  "click==8.1.3",
  "requests==2.32.2",
  "rich==12.5.1",
]
[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "mkdocs",
  "mkdocs-click",
  "mkdocs-material",
  "mkdocs-include-markdown-plugin",
  "pylint",
  "pre-commit",
  "tbump",
]


############### tbump ###############
[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"

[tool.tbump.version]
current = "0.5.0"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"

# You can specify a list of commands to
# run after the files have been patched
# and before the git commit is made

#  [[tool.tbump.before_commit]]
#  name = "check changelog"
#  cmd = "grep -q {new_version} Changelog.rst"

# Or run some commands after the git tag and the branch
# have been pushed:
#  [[tool.tbump.after_push]]
#  name = "publish"
#  cmd = "./publish.sh"
